# turboapi

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.cursor/rules/: git.mdc  python.mdc  workflow-and-change-management.mdc
addons/: __init__.py
addons/apm/: __init__.py  base.py  datadog.py  newrelic.py
addons/oauth/: __init__.py  base.py  github.py  google.py  microsoft.py
docs/: 01-architectural-plan.md  01-prd.md  02-ddt.md  02-technical-design.md  03-roadmap.md  04-getting-started.md  14-examples.md
memory/: 01-prd.md  02-ddt.md
src/turboapi/: __init__.py  application.py  dependencies.py  exceptions.py  interfaces.py
src/turboapi/cache/: __init__.py  async_memory.py  context.py  decorators.py  memory.py  starter.py
src/turboapi/cli/: __init__.py  cache.py  main.py  security.py  tasks.py
src/turboapi/cli/templates/: __init__.py  app_generator.py  generator.py
src/turboapi/core/: __init__.py  application.py  config.py  di.py  discovery.py
src/turboapi/data/: __init__.py  database.py  decorators.py  migrator.py  repository.py  starter.py
src/turboapi/observability/: __init__.py  apm.py  diagnostics.py  health.py  logging.py  metrics.py  models.py  starter.py  tracing.py
src/turboapi/security/: __init__.py  decorators.py  dependencies.py  exceptions.py  interfaces.py  jwt.py  middleware.py  rbac.py  session.py
src/turboapi/tasks/: __init__.py  decorators.py  queue.py  starter.py
src/turboapi/web/: __init__.py  decorators.py  routing.py  types.py  utils.py
tests/: test_application.py  test_async_cache_decorator.py  test_async_cache_interface.py  test_async_cache_memory.py  test_asyncio_integration.py  test_cache_decorator.py  test_cache_discovery.py  test_cache_interface.py  test_cache_memory.py  test_cache_starter.py  test_cli_app_generator.py  test_cli_cache.py  test_cli_main.py  test_cli_security.py  test_cli_tasks.py  test_cli_templates.py  test_config.py  test_config_integration.py  test_data_database.py  test_data_migrator.py  test_data_repository.py  test_data_starter.py  test_di_container.py  test_discovery.py  test_discovery_controllers.py  test_oauth_addons.py  test_observability_apm.py  test_observability_diagnostics.py  test_observability_health.py  test_observability_logging.py  test_observability_metrics.py  test_observability_tracing.py  test_security_decorators.py  test_security_interfaces.py  test_security_jwt.py  test_security_middleware.py  test_security_rbac.py  test_security_session.py  test_smart_cache_decorator.py  test_system_metrics_integration.py  (+8 more)
turboapi-addons/: README.md  pyproject.toml
turboapi-addons/tests/: test_oauth_addons.py
turboapi-addons/turboapi_addons/: __init__.py  base.py
turboapi-addons/turboapi_addons/apm/: __init__.py  base.py  datadog.py  newrelic.py
turboapi-addons/turboapi_addons/oauth/: __init__.py  base.py  github.py  google.py  microsoft.py
